[package]
name = "ralloc_shim"
version = "0.1.1"
authors = ["Ticki", "Jeremy Soller <jackpot51@gmail.com>"]

[profile.release]
panic = "abort"
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[target.'cfg(not(any(target_os = "switch", target_os = "redox")))'.dependencies]
sc = "0.2.1"

[target.'cfg(target_os = "redox")'.dependencies]
redox_syscall = "0.1"

[target.'cfg(target_os = "switch")'.dependencies]
megaton-hammer = { git = "https://github.com/MegatonHammer/megaton-hammer", path = "../megatonhammer/megaton-hammer" }
spin = { version = "0.4.6" }
